--- a/routes/index/components/counter.marko
+++ b/routes/index/components/counter.marko
@@ -1,8 +1,8 @@
 /**
  * This is a presentation component that has no knowledge of Redux.
  * When an action needs to be performed it simply emits an event
- * that that needs to be handled by a parent container component.
- * In this example, the `app` component will handle the `increment and
+ * that needs to be handled by a parent container component.
+ * In this example, the `app` component will handle the `increment` and
  * `decrement` actions by directly interacting with the Redux store.
  */
 class {
